# ViiperHexBots

./: .gitignore  .gitmodules  ARCHITECTURE_REFACTOR_PLAN.md  BotLogic.ahk  MOB_RECOGNITION_AUDIT.md  MemoryOperations.ahk  MobData.ahk  README.md  _analyze_fp.py  _diag_noise.py  _diag_palette.py  _heatmap_viz.py  build.ps1  config.ini  debug_vis.py  main.ahk  pyproject.toml  run.bat  run.pyw  test-horn-mob-recognition.ahk  test-mob-recognition.ahk  utilityFunctions.ahk
Lib/: BotLogic.ahk  BotSession.ahk  ClientProfile.ahk  HuntLogOverlay.ahk  HuntMode.ahk  HuntPolicy.ahk  HuntTracks.ahk  MemoryOperations.ahk  MobData.ahk  MobRecognition.ahk  MobStateRecognition.ahk  SessionLog.ahk  ViiperInput.ahk  utilityFunctions.ahk
assets/: act_transform.py  sprite.grf
assets/mobs/: README.md
clients/: Generic.json  HoneyRO.json  Revenant.json
docs/: hunt-scan-audit.md
generated_descriptors/: README.md
input-bridge/: bridge.go  go.mod  go.sum  keys.go  main.go  prereq.go
mob-recognition/: README.md  act_reader.py  bench_local_track.py  bench_scan_paths.py  binary_reader.py  capture.py  cli.py  frame_renderer.py  hunt_track_rules.py  save_scan_capture.py  setup.ps1  spr_reader.py  template_io.py  test_corpse_detection.py  test_moving_mob_tracking.py  test_simple_pipeline.py  test_state_track_ids.py
pybot/: __init__.py  _protocols.py  paths.py
pybot/app/: __init__.py  (+14 more)
scripts/: build-mob-descriptor.ps1  capture_detect.py  check-ahk.ps1  make_mobs_big_red.py  run_all_hunt_tests.ps1  run_recognition_tests.ps1  smoke_test.py  test_detection.py
tests/: conftest.py
(+255 files in other folders)
